# a-maze-batz

./: .editorconfig  CMakeLists.txt  LICENSE  readme.md
assets/: CMakeLists.txt
assets/fonts/: CompassPro.md
source/: CMakeLists.txt  game.cpp  game.hpp  icon.cpp  main.cpp
